tests/simple-app/simple-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-app
spec:
  rules:
  - host: simple-app.example.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: simple-app-service
            port:
              number: 8080
  tls:
  - hosts:
    - simple-app.rancher.localhost
