tests/simple-app/simple-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app-service
spec:
  selector:
    app: simple-app
  ports:
  - port: 8080
    targetPort: 8000
